--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -116,7 +116,7 @@ li > label {
   width: 226px;
 }
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 button.delete img {
   height: 2em;
@@ -130,17 +130,17 @@ button.delete img:hover {
 /* Completed */
 ul#completed-tasks label {
   color: #888;
-  text-decoration: line-through
+  text-decoration: line-through;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.editMode input[type=text] {
   display: inline-block;
-  width:224px
+  width:224px;
 }
 
 ul li.editMode label {
